PRO-0: add delete character
